Add c_bagel as requirement since it is yet not inherited from cpp_bagel_wrapper and needed to built with seperate prefixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ pkg_check_modules(PKGCONFIG
                   lib_manager
                   data_broker
                   cpp_bagel_wrapper
+                  c_bagel
                   mars_interfaces
                   mars_utils
                   main_gui
